<resources>
    <string name="app_name">Погода</string>
    <string name="temperature_label">Температура</string>
    <string name="feels_like_label">Ощущается как</string>
    <string name="city_coordinates">lt/ln %s, %s"</string>
    <string name="error">Error</string>
    <string name="reload">Reload</string>
    <string name="load_error">Error data loading</string>
    <string name="loading">loading</string>
    <string name="city_name">City</string>
    <string name="temp">temp</string>
    <string name="feels_like">feels_like</string>
    <string name="lat_lon">lat_lon</string>
    <string name="menu_title_history">History</string>
    <string name="feel">Feel</string>
    <string name="menu_title_contacts">Контакты</string>
    <string name="dialog_button_close">Закрыть</string>
    <string name="dialog_title_no_gps">Доступ к геолокации закрыт</string>
    <string name="dialog_message_no_gps">Разрешите доступ к геолокации, если хотите узнать погоду текущего места</string>
    <string name="dialog_title_gps_turned_off">GPS отключён</string>
    <string name="dialog_message_last_location_unknown">Местонахождение неизвестно. Включите GPS, если хотите получить погоду по текущему адресу</string>
    <string name="dialog_message_last_known_location">Показана последняя известная локация. Включите GPS, если хотите обновить местонахождение</string>
    <string name="dialog_rationale_title">Доступ к геолокации</string>
    <string name="dialog_rationale_message">Объяснение</string>
    <string name="dialog_rationale_give_access">Предоставить доступ</string>
    <string name="dialog_rationale_decline">Не надо</string>
    <string name="dialog_address_title">Ваш адрес</string>
    <string name="dialog_address_get_weather">Узнать погоду</string>
    <string name="hint_for_input_field">Введите название города</string>
</resources>